--- a/Evaluation/index.html
+++ b/Evaluation/index.html
@@ -11,8 +11,10 @@
 <body>
     <header>Word Guessing Game</header>
     <div class="content"></div>
-    <input id="user-input" maxlength="1" type="text"><br>
+    <input id="user-input" maxlength="1" type="text">
     <button id="resetBtn">New Game</button>
+    <p class="guess_history">Guessed letters: </p>
+    <dic class="my_timer">Time Left: 60s</dic>
     <footer></footer>
     
 </body>
